--- a/templates/tex/basic.tex
+++ b/templates/tex/basic.tex
@@ -1,10 +1,13 @@
-\documentclass[12pt]{article}
-\usepackage{blindtext}
+\documentclass[a4paper,12pt]{article}
+\usepackage{caption}
+\captionsetup[table]{name=Tabel}
+\captionsetup[figure]{name=Figur}
 
 \linespread{1.5}			% Increase space between lines
 \setlength{\parindent}{0in}		% Remove paragraph indentation
 \setlength{\parskip}{1em}		% Increase paragraph spacing
 \usepackage[margin=0.5in]{geometry}	% Decrease margins
+\pagenumbering{gobble}			% Disable page numbering
 
 \title{Title}
 \author{Author}
@@ -13,7 +16,9 @@
 \begin{document}
 
 \maketitle
+\tableofcontents
+\newpage
 
-\Blindtext
+\section{First heading}
 
 \end{document}
