--- a/templates/tex/table.tex
+++ b/templates/tex/table.tex
@@ -1,7 +1,5 @@
-%\usepackage{caption}
-%\captionsetup[table]{name=Tabel}
-
-\begin{table}
+\begin{table}[h]
+	\caption{This is some placeholder text.}
 	\centering
 	\begin{tabular}{ |c|c|c| }
 		\hline
@@ -11,6 +9,5 @@
 		cell7 & cell8 & cell9 \\
 		\hline
 	\end{tabular}
-	\caption{This is some placeholder text.}
 \end{table}
 
