--- a/templates/tex/formel.tex
+++ b/templates/tex/formel.tex
@@ -1,5 +1,8 @@
 %\usepackage{xifthen}
 
-\newcommand{\formel}[3]{\textbf{#1:}\\
-#2 \ifthenelse{\isempty{#3}}{}{{\tiny{(#3)}}}
-\medskip}
+\newcommand{\formel}[3][]{
+	\textbf{#2:}\\
+	#3
+	\ifthenelse{\isempty{#1}}{}{{\tiny{(#1)}}}
+	\medskip
+}
