Fixed issues with templates

--- a/templates/tex/multicol.tex
+++ b/templates/tex/multicol.tex
@@ -1,6 +1,6 @@
 %\usepackage{multicol}
 
-\begin{multicols}{2} [This text is going to be on the left side of the paragraph.]
+\begin{multicols}{2} [This text is going to be on top of the paragraph.]
 	This text is going to be on the left side of the paragraph.
 
 	\columnbreak
