Added more commands to beamer template

--- a/tex/beamer.tex
+++ b/tex/beamer.tex
@@ -5,6 +5,9 @@
 %\setbeamercolor{itemize item}{fg=red}		% Make list bullets red
 %\setlength{\leftmargini}{0.5em}		% Set margin from the left
 
+%\usecolortheme{owl}
+%\geometry{margin=0em}
+
 % Title page
 \title{Title}
 \author{Author}
@@ -23,6 +26,8 @@
 		\end{column}
 	\end{columns}
 }
+
+\newcommand{\bigimage}[1]{\includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{#1}}
 
 \begin{document}
 
