--- a/templates/basic.tex
+++ b/templates/basic.tex
@@ -67,59 +67,59 @@
 	\end{center}
 }%>>>
 
-% Cheat<<<
+\iffalse % Cheat<<<
 % Formating<<<
-% {\textbf{bold}}
-% {\emph{emphatic}}
-% {\textit{italic}}
-% {\underline{underlined}}>>>
+{\textbf{bold}}
+{\emph{emphatic}}
+{\textit{italic}}
+{\underline{underlined}} %>>>
 % Size<<<
-% {\tiny{Tiny}}
-% {\scriptsize{scriptsize}}
-% {\footnotesize{footnotesize}}
-% {\small{small}}
-% {\normalsize{normalsize}}
-% {\large{large}}
-% {\Large{Large}}
-% {\LARGE{LARGE}}
-% {\huge{huge}}>>>
+{\tiny{Tiny}}
+{\scriptsize{scriptsize}}
+{\footnotesize{footnotesize}}
+{\small{small}}
+{\normalsize{normalsize}}
+{\large{large}}
+{\Large{Large}}
+{\LARGE{LARGE}}
+{\huge{huge}} %>>>
 % Coloring<<<
-% \textcolor{red}{<++>}>>>
+\textcolor{red}{<++>} %>>>
 % Horizontal lines<<<
-% \noindent{\dotfill}
-% \noindent{\hrulefill}>>>
+\noindent{\dotfill}
+\noindent{\hrulefill} %>>>
 % Skipping<<<
-% \smallskip
-% \medskip
-% \bigskip>>>
+\smallskip
+\medskip
+\bigskip %>>>
 % Lists<<<
-% \begin{itemize}
-% 	\item This is item 1
-% 	\item This is item 2
-% 	\item This is item 3
-% \end{itemize}
-% \begin{enumerate}
-% 	\item This is item 1
-% 	\item This is item 2
-% 	\item This is item 3
-% \end{enumerate}>>>
-% multicol<<<
-%\begin{multicols}{2} [This text is going to be on top of the paragraph.]
-%	This text is going to be on the left side of the paragraph.
-%
-%	\columnbreak
-%
-%	This text is going to be on the right side of the paragraph.
-%\end{multicols}>>>
+\begin{itemize}
+	\item This is item 1
+	\item This is item 2
+	\item This is item 3
+\end{itemize}
+\begin{enumerate}
+	\item This is item 1
+	\item This is item 2
+	\item This is item 3
+\end{enumerate} %>>>
+% Multicol<<<
+\begin{multicols}{2} [This text is going to be on top of the paragraph.]
+	This text is going to be on the left side of the paragraph.
+
+	\columnbreak
+
+	This text is going to be on the right side of the paragraph.
+\end{multicols} %>>>
 % Tabular<<<
-% \begin{tabular}{ |l|c|r| }
-% 	\hline
-% 	Longer cell & Longer cell & Longer cell \\
-% 	\hline
-% 	cell4 & cell5 & cell6 \\
-% 	cell7 & cell8 & cell9 \\
-% 	\hline
-% \end{tabular}>>>
+\begin{tabular}{ |l|c|r| }
+	\hline
+	Longer cell & Longer cell & Longer cell \\
+	\hline
+	cell4 & cell5 & cell6 \\
+	cell7 & cell8 & cell9 \\
+	\hline
+\end{tabular} %>>>
 % Tikz<<<
 % Tikz lines<<<
 \begin{tikzpicture}
@@ -132,13 +132,13 @@
 	\draw[->] (1) -- (2);
 
 	\draw (0,-3) -- node[above] {text above edge} (5,-3);
-\end{tikzpicture}%>>>
+\end{tikzpicture} %>>>
 % Tikz shapes<<<
 \begin{tikzpicture}
 	\draw[very thick](0,0) rectangle (3,3);
 	\draw[red](0,0) circle ();
 	\draw(0,0) arc (0:95:1.5);
-\end{tikzpicture}%>>>
+\end{tikzpicture} %>>>
 % Tikz trees<<<
 \begin{tikzpicture}[every node/.style={circle, draw=black}]
 	\node{}
@@ -146,20 +146,20 @@
 	child{node{2}}
 	child{node{3}}}
 	child{node{4}};
-\end{tikzpicture}%>>>
-%>>>
-% tkz-kivitat<<<
-%\begin{tikzpicture}
-%	%\tkzKiviatDiagramFromFile{file.dat}
-%	\tkzKiviatDiagram[scale=0.5, gap=1, lattice=5] {A,B,C,D,E}
-%	\tkzKiviatLine[thick, color=blue, fill=blue!20](5,1,4,3,4)
-%\end{tikzpicture}>>>
-% xcolor<<<
-%\definecolor{Mycolor1}{HTML}{FFD700}
-%\colorlet{Mycolor2}{green!10!orange!90!}
-%\textcolor{Mycolor1}{This is some colored text.}
-%\textcolor{Mycolor2}{This is some colored text.}>>>
+\end{tikzpicture} %>>>
 % >>>
+% tkz-kivitat<<<
+\begin{tikzpicture}
+	%\tkzKiviatDiagramFromFile{file.dat}
+	\tkzKiviatDiagram[scale=0.5, gap=1, lattice=5] {A,B,C,D,E}
+	\tkzKiviatLine[thick, color=blue, fill=blue!20](5,1,4,3,4)
+\end{tikzpicture} %>>>
+% xcolor<<<
+\definecolor{Mycolor1}{HTML}{FFD700}
+\colorlet{Mycolor2}{green!10!orange!90!}
+\textcolor{Mycolor1}{This is some colored text.}
+\textcolor{Mycolor2}{This is some colored text.} %>>>
+\fi %>>>
 
 \begin{document}
 
