--- a/templates/formelblad.tex
+++ b/templates/formelblad.tex
@@ -15,16 +15,14 @@
 
 \begin{document}
 
-\begin{center}
-	\resizebox{\columnwidth}{!}{%
-		\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|}
-			\hline
-			tera (T) & giga (G) & mega (M) & kilo (k) & hekto (h) & deka (da) & deci (d) & centi (c) & milli (m) & mikro (µ) & nano (n) & piko (p) & femto (f) \\
-			$10^{12}$ & $10^9$ & $10^6$ & $10^3$ & $10^2$ & $10^1$ & $10^{-1}$ & $10^{-2}$ & $10^{-3}$ & $10^{-6}$ & $10^{-9}$ & $10^{-12}$ & $10^{-15}$ \\
-			\hline
-		\end{tabular}
-		}
-\end{center}
+\resizebox{\columnwidth}{!}{%
+	\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+		\hline
+		tera (T) & giga (G) & mega (M) & kilo (k) & hekto (h) & deka (da) & deci (d) & centi (c) & milli (m) & mikro (µ) & nano (n) & piko (p) & femto (f) \\
+		$10^{12}$ & $10^9$ & $10^6$ & $10^3$ & $10^2$ & $10^1$ & $10^{-1}$ & $10^{-2}$ & $10^{-3}$ & $10^{-6}$ & $10^{-9}$ & $10^{-12}$ & $10^{-15}$ \\
+		\hline
+	\end{tabular}%
+}
 
 \formel[Comment]{Densitet}
 {$\rho = \frac{m}{v}$}
