Reorganised templates and snippet

--- a/templates/skeleton.tex
+++ b/templates/skeleton.tex
@@ -1,8 +1,20 @@
 \documentclass[a4paper]{article}
 \usepackage{parskip}
 \usepackage[margin=1in]{geometry}
+\usepackage{caption}
+\captionsetup[table]{name=Tabel}
+\captionsetup[figure]{name=Figur}
+
+\title{Title}
+\author{Author}
+\date{\today}
 
 \begin{document}
+
+\maketitle
+\newpage
+\tableofcontents
+\newpage
 
 \LaTeX
 
