--- a/templates/beamer.tex
+++ b/templates/beamer.tex
@@ -1,6 +1,7 @@
 \documentclass{beamer}
+\usepackage[swedish]{isodate}
 
-\usecolortheme{beaver}
+%\usecolortheme{beaver}
 %\usecolortheme{owl}
 \setbeamertemplate{navigation symbols}{}
 
@@ -9,26 +10,25 @@
 \date{\today}
 \institute{Institute}
 
-%\imgcolumn[<image width>]{<left text>}{<image>}
-\newcommand{\imgcolumn}[3][\textwidth]{
-	\begin{columns}
-		\begin{column}{.5\textwidth}
-			#2
-		\end{column}
-		\begin{column}{.5\textwidth}
-			\begin{center}
-				\includegraphics[width=#1]{#3}
-			\end{center}
-		\end{column}
-	\end{columns}
-}
-
 %\imgslide{<image>}
 \newcommand{\imgslide}[1]{
 	\begin{center}
 		\includegraphics[width=\textwidth, height=0.7\textheight, keepaspectratio]{#1}
 	\end{center}
 }
+
+%\begin{frame}
+%	\frametitle{Frametitle}
+%	\begin{columns}
+%		\begin{column}{.5\textwidth}
+%			This text will be on the right side of the image.
+%		\end{column}
+%		\begin{column}{.5\textwidth}
+%			\centering
+%			\includegraphics[width=\textwidth]{img.png}
+%		\end{column}
+%	\end{columns}
+%\end{frame}
 
 \begin{document}
 
