Added biblatex, abstract to latex template

--- a/templates/skeleton.tex
+++ b/templates/skeleton.tex
@@ -2,40 +2,50 @@
 %\documentclass[varwidth,border=12pt]{standalone}
 %\documentclass[a5paper,landscape]{article}
 
-% Formatting<<<
+% Packages<<<
 \usepackage[margin=1in]{geometry}
 \usepackage{parskip}
+\usepackage{blindtext}
 \usepackage[iso,swedish]{isodate}
-%\pagenumbering{gobble}>>>
+\usepackage{graphicx}
+%\usepackage{amsmath}
+\usepackage{diagbox}
+\usepackage[swedish,english]{babel}
+\usepackage{float}
+\usepackage[colorlinks=true, allcolors=blue]{hyperref}
+%\usepackage{mathptmx}
+%\usepackage[doublespacing]{setspace}
+%\pagenumbering{gobble}%>>>
 
-% % Extra packages<<<
-% \usepackage{graphicx}
-% \usepackage{amsmath}
-% \usepackage{diagbox}
-% \usepackage[colorlinks=true, allcolors=blue]{hyperref}%>>>
+% Biblatex<<<
+\usepackage[sorting=none,date=iso,style=science]{biblatex}
+\addbibresource{\jobname.bib}
+\begin{filecontents}{\jobname.bib}
+@article{example2021,
+	author="John doe",
+	title="An placeholder latex citation",
+	date="2019-08-05",
+	publisher="Random pulisher",
+	url="https://example.org"
+}
+\end{filecontents}%>>>
 
-% % Figures/Tables<<<
-% \usepackage{float}
-% \usepackage{caption}
-% \captionsetup[table]{name=Tabell}
-% \captionsetup[figure]{name=Figur}%>>>
+% Commands <<<
+\newcommand{\begrepp}[2]{\textbf{\MakeUppercase #1:} #2.}
 
-% % Commands <<<
-% \newcommand{\begrepp}[2]{\textbf{\MakeUppercase #1:} #2.}
-% 
-% \newcommand{\formel}[3][]{
-% 	\textbf{\MakeUppercase #2:}\\ #3
-% 	\ifx #1\undefined \else
-% 	{\tiny(#1)}
-% 	\fi
-% }
-% 
-% \let\oldincludegraphics\includegraphics
-% \renewcommand{\includegraphics}[2][width=\textwidth, height=\textheight, keepaspectratio]{
-% 	\begin{center}
-% 		\oldincludegraphics[#1]{#2}
-% 	\end{center}
-% }%>>>
+\newcommand{\formel}[3][]{
+	\textbf{\MakeUppercase #2:}\\ #3
+	\ifx #1\undefined \else
+	{\tiny(#1)}
+	\fi
+}
+
+\let\oldincludegraphics\includegraphics
+\renewcommand{\includegraphics}[2][width=\textwidth, height=\textheight, keepaspectratio]{
+	\begin{center}
+		\oldincludegraphics[#1]{#2}
+	\end{center}
+}%>>>
 
 % % maketitle<<<
 % \title{Title}
@@ -64,8 +74,21 @@
 	\end{flushright}
 \end{titlepage}%>>>
 
-\newpage%<<<
-\tableofcontents
-\newpage%>>>
+\begin{abstract}
+	\blindtext
+\end{abstract}
 
+% tableofcontents<<<
+\newpage
+
+\tableofcontents
+
+\newpage
+%>>>
+
+\section{Placeholder}
+\blindtext
+\cite{example2021}
+
+\printbibliography
 \end{document}
