--- a/templates/skeleton.tex
+++ b/templates/skeleton.tex
@@ -30,6 +30,22 @@
 }
 \end{filecontents}%>>>
 
+% %chemmacros<<<
+% \usepackage{chemmacros}
+% \usechemmodule{redox}
+% \chemsetup[redox]{
+% 	format = \textcolor{red},
+% 	pos = top,
+% 	explicit-sign = true
+% }%>>>
+
+% % Todolist<<<
+% \usepackage{enumitem,amssymb,pifont}
+% \newlist{todolist}{itemize}{2}
+% \setlist[todolist]{label=$\square$}
+% \newcommand{\done}{\rlap{$\square$}{\raisebox{2pt}{\large\hspace{1pt}\ding{51}}}\hspace{-2.5pt}}
+% \newcommand{\wontfix}{\rlap{$\square$}{\large\hspace{1pt}\ding{55}}}%>>>
+
 % Commands <<<
 \newcommand{\begrepp}[2]{\textbf{\MakeUppercase #1:} #2.}
 
