Added more packages

--- a/templates/skeleton.tex
+++ b/templates/skeleton.tex
@@ -9,13 +9,20 @@
 \usepackage[iso,swedish]{isodate}
 \usepackage{graphicx}
 %\usepackage{amsmath}
+%\usepackage{tcolorbox}
+\usepackage{tabularx}
 \usepackage{diagbox}
-\usepackage[swedish,english]{babel}
+\usepackage[english,swedish]{babel}
 \usepackage{float}
 \usepackage[colorlinks=true, allcolors=blue]{hyperref}
+\usepackage{adjustbox}
+\usepackage[multiple]{footmisc}
 %\usepackage{mathptmx}
 %\usepackage[doublespacing]{setspace}
 %\pagenumbering{gobble}%>>>
+
+\usepackage[exponent-product=\cdot,per-mode=symbol]{siunitx}
+\DeclareSIUnit{\gWh}{\giga{\watt\hour}}
 
 % Biblatex<<<
 \usepackage[sorting=none,date=iso,style=science]{biblatex}
