--- a/templates/skeleton.tex
+++ b/templates/skeleton.tex
@@ -21,8 +21,7 @@
 
 % Science
 %\usepackage{amsmath}
-%\usepackage[exponent-product=\cdot,per-mode=symbol]{siunitx}
-%\DeclareSIUnit{\gWh}{\giga{\watt\hour}}
+%\usepackage[exponent-product=\cdot,per-mode=symbol,inter-unit-product=]{siunitx}
 %\usepackage{chemmacros}
 %\usechemmodule{redox}
 %\chemsetup[redox]{format = \textcolor{red}, pos = top, explicit-sign = true}
@@ -63,7 +62,7 @@
 %\newcommand{\begrepp}[2]{\textbf{#1:} #2}
 
 %\newcommand{\formel}[3][]{
-%	\textbf{\MakeUppercase #2:}\\ #3
+%	\textbf{#2:}\\ #3
 %	\ifx #1\undefined \else
 %	{\tiny(#1)}
 %	\fi
