--- a/templates/beamer.tex
+++ b/templates/beamer.tex
@@ -3,7 +3,7 @@
 
 %\usecolortheme{beaver}
 %\usecolortheme{owl}
-\setbeamertemplate{navigation symbols}{}
+%\setbeamertemplate{navigation symbols}{}
 
 \title{Title}
 \author{Author}
