Moved calling packages to main template

--- a/snippet/tikz-trees.tex
+++ b/snippet/tikz-trees.tex
@@ -1,7 +1,20 @@
-\begin{tikzpicture}[every node/.style={circle, draw=black}]
-	\node{}
-	child{node{1}
-	child{node{2}}
-	child{node{3}}}
-	child{node{4}};
+\begin{tikzpicture}[
+		align=flush center, text width=5em,
+		every node/.style={rectangle, draw=black},
+		level 1/.append style={sibling distance=22em},
+		level 2/.append style={sibling distance=6em},
+		]
+	\node{School}
+		child{node{Biologi}
+			child{node{Ekologi}}
+			child{node{Evolution}}
+			child{node{Genitik}}
+			child{node{Klasisk-genitik}}
+		}
+		child{node{Kemi}
+			child{node{Bindningar}}
+			child{node{Redox}}
+			child{node{Stokiometri}}
+		}
+	;
 \end{tikzpicture}
