--- a/templates/skeleton.tex
+++ b/templates/skeleton.tex
@@ -12,6 +12,11 @@
 \usepackage{parskip}
 %\usepackage[colorlinks=true, allcolors=blue]{hyperref}
 \usepackage[multiple]{footmisc}
+%\usepackage[document]{ragged2e}
+%\usepackage{multicol}
+%\setlength{\columnseprule}{1pt}
+%\setlength{\columnsep}{1cm}
+
 
 %% Figures/Tables
 %\usepackage{float}
@@ -30,6 +35,7 @@
 %\chemsetup[redox]{format=\textcolor{red},pos=top,explicit-sign=true}
 %\usepackage[sorting=none,date=iso,style=science]{biblatex}
 %\addbibresource{\jobname.bib}
+%\usepackage{gnuplottex}
 
 %% Dummy
 %\usepackage{blindtext}
