--- a/snippet/todo.tex
+++ b/snippet/todo.tex
@@ -1,6 +1,4 @@
-%\usepackage{enumitem}
-%\usepackage{amssymb}
-%\usepackage{pifont}
+%\usepackage{enumitem,amssymb,pifont}
 \newlist{todolist}{itemize}{2}
 \setlist[todolist]{label=$\square$}
 \newcommand{\done}{\rlap{$\square$}{\raisebox{2pt}{\large\hspace{1pt}\ding{51}}}\hspace{-2.5pt}}
