Added numcases package and some options to siunitx

--- a/templates/skeleton.tex
+++ b/templates/skeleton.tex
@@ -28,7 +28,8 @@
 
 %% Science
 %\usepackage{amsmath}
-%\usepackage[exponent-product=\cdot,per-mode=symbol,inter-unit-product=]{siunitx}
+%\usepackage{cases}
+%\usepackage[exponent-product=\cdot,per-mode=symbol,inter-unit-product=,group-digits=false,output-product=\cdot]{siunitx}
 %\usepackage[siunitx,nooldvoltagedirection,european]{circuitikz}
 %\usepackage{chemmacros}
 %\usechemmodule{redox}
