Boxplots and misc graphs

--- a/templates/skeleton.tex
+++ b/templates/skeleton.tex
@@ -37,6 +37,8 @@
 %\usepackage[sorting=none,date=iso,style=science]{biblatex}
 %\addbibresource{\jobname.bib}
 %\usepackage{gnuplottex}
+%\usepackage{pgfplots}
+%\usepgfplotslibrary{statistics}
 
 %% Dummy
 %\usepackage{blindtext}
