Fixed errors in latex templates

--- a/templates/skeleton.tex
+++ b/templates/skeleton.tex
@@ -10,13 +10,14 @@
 \usepackage[english,swedish]{babel}
 \usepackage[margin=1in]{geometry}
 \usepackage{parskip}
-%\usepackage[colorlinks=true, allcolors=blue]{hyperref}
 \usepackage[multiple]{footmisc}
+%\usepackage[colorlinks=true, allcolors=blue]{hyperref}
 %\usepackage[document]{ragged2e}
+
+%% Multicols
 %\usepackage{multicol}
 %\setlength{\columnseprule}{1pt}
 %\setlength{\columnsep}{1cm}
-
 
 %% Figures/Tables
 %\usepackage{float}
@@ -26,19 +27,27 @@
 %\usepackage{diagbox}
 %\usepackage{tcolorbox}
 
-%% Science
+%% Math
 %\usepackage{amsmath}
 %\usepackage{cases}
-%\usepackage[exponent-product=\cdot,per-mode=symbol,inter-unit-product=,group-digits=false,output-product=\cdot]{siunitx}
-%\usepackage[siunitx,nooldvoltagedirection,european]{circuitikz}
-%\usepackage{chemmacros}
-%\usechemmodule{redox}
-%\chemsetup[redox]{format=\textcolor{red},pos=top,explicit-sign=true}
-%\usepackage[sorting=none,date=iso,style=science]{biblatex}
-%\addbibresource{\jobname.bib}
 %\usepackage{gnuplottex}
 %\usepackage{pgfplots}
 %\usepgfplotslibrary{statistics}
+
+%% Physics
+%\usepackage[exponent-product=\cdot,per-mode=symbol,inter-unit-product=,group-digits=false,output-product=\cdot]{siunitx}
+%\usepackage[siunitx,nooldvoltagedirection,european]{circuitikz}
+
+%% Chemistry
+%\usepackage{upgreek}
+%\usepackage{chemmacros}
+%\usechemmodule{redox}
+%\chemsetup[redox]{format=\textcolor{red},pos=top,explicit-sign=true}
+
+%% Biblatex
+%\usepackage{csquotes}
+%\usepackage[sorting=none,date=iso,seconds=true,style=science]{biblatex}
+%\addbibresource{\jobname.bib}
 
 %% Dummy
 %\usepackage{blindtext}
