Added some spacing between tables and captions

--- a/templates/skeleton.tex
+++ b/templates/skeleton.tex
@@ -26,6 +26,8 @@
 %\usepackage{tabularx}
 %\usepackage{diagbox}
 %\usepackage{tcolorbox}
+%\usepackage{caption}
+%\captionsetup[table]{skip=3pt}
 
 %% Math
 %\usepackage{amsmath}
