Moved usepackage commands to separate files divided by field

--- a/templates/skeleton.tex
+++ b/templates/skeleton.tex
@@ -1,64 +1,11 @@
 \documentclass[a4paper]{article}
-%\documentclass[varwidth,border=12pt]{standalone}
-%\documentclass[a5paper,landscape]{article}
-
-%% Formating/Mics
-%\pagenumbering{gobble}
-%\usepackage{mathptmx}
-%\usepackage[doublespacing]{setspace}
 \usepackage[iso,swedish]{isodate}
 \usepackage[english,swedish]{babel}
 \usepackage[margin=1in]{geometry}
 \usepackage{parskip}
-\usepackage[multiple]{footmisc}
+%\usepackage[multiple]{footmisc}
 %\usepackage[colorlinks=true, allcolors=blue]{hyperref}
-%\usepackage[document]{ragged2e}
-
-%% Multicols
-%\usepackage{multicol}
-%\setlength{\columnseprule}{1pt}
-%\setlength{\columnsep}{1cm}
-
-%% Figures/Tables
-%\usepackage{float}
-%\usepackage{adjustbox}
-%\usepackage{graphicx}
-%\usepackage{tabularx}
-%\usepackage{diagbox}
-%\usepackage{tcolorbox}
-%\usepackage{caption}
-%\captionsetup[table]{skip=3pt}
-
-%% Math
-%\usepackage{amsmath}
-%\usepackage{cases}
-%\usepackage{gnuplottex}
-%\usepackage{pgfplots}
-%\usepgfplotslibrary{statistics}
-
-%% Physics
-%\usepackage[exponent-product=\cdot,per-mode=symbol,inter-unit-product=,group-digits=false,output-product=\cdot]{siunitx}
-%\usepackage[siunitx,nooldvoltagedirection,european]{circuitikz}
-
-%% Chemistry
-%\usepackage{upgreek}
-%\usepackage{chemmacros}
-%\usechemmodule{redox}
-%\chemsetup[redox]{format=\textcolor{red},pos=top,explicit-sign=true}
-
-%% Biblatex
-%\usepackage{csquotes}
-%\usepackage[sorting=none,date=iso,seconds=true,style=science]{biblatex}
-%\addbibresource{\jobname.bib}
-
-%% Dummy
 %\usepackage{blindtext}
-%\usepackage{mwe}
-
-\newcommand{\formel}[3][]{
-	\textbf{#2:}\\ #3
-	\ifx #1\undefined \else {\tiny(#1)} \fi
-}
 
 \title{Title}
 \author{Author}
