Tikz/pgf snippets

--- a/snippet/pgfplots_boxplot.tex
+++ b/snippet/pgfplots_boxplot.tex
@@ -6,6 +6,7 @@
 			legend entries={Alex, Erik, Maja},
 			area legend,
 			legend pos=north west,
+			xtick distance=2,
 		]
 		\addplot+[boxplot] table[y index=0] {
 			15
