--- a/snippet/tikz-shapes.tex
+++ b/snippet/tikz-shapes.tex
@@ -1,5 +1,6 @@
 \begin{tikzpicture}
-	\draw[very thick](0,0) rectangle (3,3);
-	\draw[red](0,0) circle ();
-	\draw(0,0) arc (0:95:1.5);
+	\draw (0,0) rectangle (3,3);
+	\draw (0,0) circle (0.5);
+	\draw (0,0) circle[radius=1cm];
+	\draw (0,0) arc (0:95:1.5);
 \end{tikzpicture}
