--- a/snippet/adjustbox.tex
+++ b/snippet/adjustbox.tex
@@ -1,34 +1,13 @@
 \begin{adjustbox}{width=\textwidth}
 	\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|}
 		\hline
-		tera (T) &
-		giga (G) &
-		mega (M) &
-		kilo (k) &
-		hekto (h) &
-		deka (da) &
-		deci (d) &
-		centi (c) &
-		milli (m) &
-		mikro (µ) &
-		nano (n) &
-		piko (p) &
-		femto (f)
+		tera (T) & giga (G) & mega (M) & kilo (k) & hekto (h) & deka
+		(da) & deci (d) & centi (c) & milli (m) & mikro (µ) & nano (n)
+		& piko (p) & femto (f)
 		\\
-		$10^{12}$ &
-		$10^9$ &
-		$10^6$ &
-		$10^3$ &
-		$10^2$ &
-		$10^1$ &
-		$10^{-1}$ &
-		$10^{-2}$ &
-		$10^{-3}$ &
-		$10^{-6}$ &
-		$10^{-9}$ &
-		$10^{-12}$ &
-		$10^{-15}$
-		\\
-		\hline
+		$10^{12}$ & $10^9$ & $10^6$ & $10^3$ & $10^2$ & $10^1$ &
+		$10^{-1}$ & $10^{-2}$ & $10^{-3}$ & $10^{-6}$ & $10^{-9}$ &
+		$10^{-12}$ & $10^{-15}$
+		\\\hline
 	\end{tabular}
 \end{adjustbox}
