--- a/snippet/table.tex
+++ b/snippet/table.tex
@@ -1,19 +1,19 @@
 \begin{table}[H]
 	\centering
 	\caption{very basic caption}
-	\begin{tabular}{|l|l|l|l|}
+	\begin{tabular}{|l|l|l|l|>{\bfseries}l|}
 		\hline
-		\diagbox{Försök}{Grupp} & Grupp 1 & Grupp 2 & Grupp 3 \\
-		\hline
-		\hline
-		Försök 1 & 113 & 160 & 110 \\
-		\hline
-		Försök 1 & 177 & 141 & 103 \\
-		\hline
-		Försök 1 & 102 & 186 & 111 \\
+		\diagbox{Försök}{Grupp} & Grupp 1 & Grupp 2 & Grupp 3 & Kontroll \\
 		\hline
 		\hline
-		Total & 392 & 487 & 324 \\
+		Försök 1 & 113 & 160 & 110 & 135 \\
+		\hline
+		Försök 1 & 177 & 141 & 103 & 135 \\
+		\hline
+		Försök 1 & 102 & 186 & 111 & 135 \\
+		\hline
+		\hline
+		Total & 392 & 487 & 324 & 405\\
 		\hline
 	\end{tabular}
 	\label{tab:sample_table}
