--- a/snippet/tcolorbox.tex
+++ b/snippet/tcolorbox.tex
@@ -1,7 +1,8 @@
-\begin{tcolorbox}[title=Konjugat- och kvadreringsreglerna]
-	$(a+b)^2=a^2+2ab+b^2$
-
-	$(a-b)^2=a^2-2ab+b^2$
-
-	$(a+b)(a-b)=a^2-b^2$
+\begin{tcolorbox}[
+		title=My nice heading,
+		fonttitle=\bfseries,
+		]
+	This is another \textbf{tcolorbox}.
+	\tcblower
+	Here, you see the lower part of the box.
 \end{tcolorbox}
