--- a/snippet/tikz-trees.tex
+++ b/snippet/tikz-trees.tex
@@ -1,5 +1,6 @@
 \begin{tikzpicture}[
-		align=flush center, text width=5em,
+		align=flush center,
+		text width=5em,
 		every node/.style={rectangle, draw=black},
 		level 1/.append style={sibling distance=22em},
 		level 2/.append style={sibling distance=6em},
