--- a/snippet/todo.tex
+++ b/snippet/todo.tex
@@ -1,5 +1,7 @@
 %\usepackage{enumitem,amssymb,pifont}
 \newlist{todolist}{itemize}{2}
 \setlist[todolist]{label=$\square$}
-\newcommand{\done}{\rlap{$\square$}{\raisebox{2pt}{\large\hspace{1pt}\ding{51}}}\hspace{-2.5pt}}
+\newcommand{\done}{
+	\rlap{$\square$}{\raisebox{2pt}{\large\hspace{1pt}\ding{51}}}\hspace{-2.5pt}
+	}
 \newcommand{\wontfix}{\rlap{$\square$}{\large\hspace{1pt}\ding{55}}}
