--- a/snippet/usepackage_biblatex.tex
+++ b/snippet/usepackage_biblatex.tex
@@ -1,3 +1,18 @@
 \usepackage{csquotes}
-\usepackage[sorting=none,date=iso,seconds=true,style=science]{biblatex}
+\usepackage[
+	sorting=none,
+	date=iso, seconds=true,
+	%style=science,
+	%bibstyle=apa,
+	alldates=iso,
+]{biblatex}
 \addbibresource{\jobname.bib}
+%\begin{filecontents}{\jobname.bib}
+%@article{example2021,
+%	author="John doe",
+%	title="An placeholder latex citation",
+%	date="2019-08-05",
+%	publisher="Random pulisher",
+%	url="https://example.org",
+%}
+%\end{filecontents}
