--- a/snippet/usepackage_figuresandtables.tex
+++ b/snippet/usepackage_figuresandtables.tex
@@ -1,8 +1,8 @@
+\usepackage{array}
 \usepackage{float}
-%\usepackage{adjustbox}
+\usepackage{caption}
 \usepackage{graphicx}
+%\usepackage{adjustbox}
 %\usepackage{tabularx}
 %\usepackage{diagbox}
 %\usepackage{tcolorbox}
-\usepackage{caption}
-\captionsetup[table]{skip=3pt}
