--- a/snippet/usepackage_math.tex
+++ b/snippet/usepackage_math.tex
@@ -1,7 +1,5 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{cases}
-\usepackage{pgfplots}
-\usepgfplotslibrary{statistics}
-\usepackage{tikz}
-\usetikzlibrary{angles, quotes, babel}
+%\usepackage{pgfplots}
+%\usepgfplotslibrary{statistics}
