--- a/snippet/usepackage_physics.tex
+++ b/snippet/usepackage_physics.tex
@@ -1,2 +1,13 @@
-\usepackage[exponent-product=\cdot,per-mode=symbol,inter-unit-product=,group-digits=false,output-product=\cdot]{siunitx}
-\usepackage[siunitx,nooldvoltagedirection,european]{circuitikz}
+\usepackage[
+	exponent-product=\cdot,
+	per-mode=symbol,
+	inter-unit-product=,
+	group-digits=false,
+	output-product=\cdot,
+]{siunitx}
+
+\usepackage[
+	siunitx,
+	nooldvoltagedirection,
+	european,
+]{circuitikz}
