--- a/snippet/figure.tex
+++ b/snippet/figure.tex
@@ -1,6 +1,6 @@
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\textwidth, height=5cm, keepaspectratio]{example-grid-100x100pt}
+	\includegraphics[height=5cm]{example-grid-100x100pt}
 	\caption{very basic caption}
 	\label{fig:sample_figure}
 \end{figure}
