--- a/snippet/skeleton.bib
+++ b/snippet/skeleton.bib
@@ -1,9 +1,7 @@
-%\begin{filecontents}{\jobname.bib}
 @article{example2021,
 	author="John doe",
 	title="An placeholder latex citation",
 	date="2019-08-05",
 	publisher="Random pulisher",
-	url="https://example.org"
+	url="https://example.org",
 }
-%\end{filecontents}
