Added chemmacros snippet.

--- a/snippet/usepackage_chemistry.tex
+++ b/snippet/usepackage_chemistry.tex
@@ -1,6 +1,9 @@
-\usepackage{chemfig}
-
+%\usepackage{chemfig}
 \usepackage{upgreek}
 \usepackage{chemmacros}
-\usechemmodule{redox}
-\chemsetup[redox]{format=\textcolor{red},pos=top,explicit-sign=true}
+\usechemmodule{redox,reactions}
+\chemsetup[redox]{
+	format=\textcolor{red},
+	pos=top,
+	explicit-sign=true,
+}
