Added missing typefaces to latex font snippet

--- a/snippet/fonts.tex
+++ b/snippet/fonts.tex
@@ -1,5 +1,17 @@
-{\ttfamily Teletype}
-{\bfseries Bold}
+\textnormal{Normal}	{\normalfont Normal} % Default
+\emph{Emphatic}		{\em Emphatic}
+\textrm{Roman} 		{\rmfamily Roman}
+\textsf{Sans-Serif} 	{\sffamily Sans-Serif}
+\texttt{Teletype} 	{\ttfamily Teletype}
+\textup{Upright} 	{\upshape Upright} % Default
+\textit{Italic} 	{\itshape Italic}
+\textsl{Slanted} 	{\slshape Slanted}
+\textsc{Small Capitals}	{\scshape Small Capitals}
+\uppercase{Uppercase}	\lowercase{Lowercase}
+\textbf{Bold}		{\bfseries Bold}
+\textmd{Medium} 	{\mdseries Medium} % Default
+\textlf{Light}		{\lfseries Light}
+
 {\tiny tiny}
 {\scriptsize scriptsize}
 {\footnotesize footnotesize}
@@ -9,3 +21,4 @@
 {\Large Large}
 {\LARGE LARGE}
 {\huge huge}
+{\Huge Huge}
