--- a/snippet/basic.tex
+++ b/snippet/basic.tex
@@ -1,4 +1,5 @@
 \usepackage[iso,swedish]{isodate}
+\usepackage{csquotes}
 %\usepackage[english,swedish]{babel}
 \usepackage[margin=1in]{geometry}
 \usepackage{parskip}
