Added swedish latex snippet

--- a/snippet/basic.tex
+++ b/snippet/basic.tex
@@ -1,7 +1,8 @@
-\usepackage[iso,swedish]{isodate}
 \usepackage{csquotes}
-%\usepackage[english,swedish]{babel}
 \usepackage[margin=1in]{geometry}
 \usepackage{parskip}
-%\usepackage[multiple]{footmisc}
-%\usepackage[colorlinks=true,allcolors=blue]{hyperref}
+\usepackage[multiple,stable]{footmisc}
+\usepackage[
+	colorlinks=true,
+	%allcolors=blue
+]{hyperref}
