Cleaned up snippets

--- a/snippet/basic.tex
+++ b/snippet/basic.tex
@@ -1,8 +1,10 @@
 \usepackage{csquotes}
 \usepackage[margin=1in]{geometry}
 \usepackage{parskip}
-\usepackage[multiple,stable]{footmisc}
+\usepackage{ftnxtra}
 \usepackage[
-	colorlinks=true,
-	%allcolors=blue
+	%colorlinks,
+	%allcolors=blue,
+	frenchlinks
 ]{hyperref}
+\usepackage[multiple]{footmisc}
