--- a/snippet/figure.tex
+++ b/snippet/figure.tex
@@ -1,6 +1,6 @@
 \begin{figure}[H]
 	\centering
 	\includegraphics[height=5cm]{example-grid-100x100pt}
-	\caption{very basic caption}
-	\label{fig:sample_figure}
+	\caption{<++>}
+	\label{fig:<++>}
 \end{figure}
