--- a/snippet/fonts.tex
+++ b/snippet/fonts.tex
@@ -16,7 +16,7 @@
 {\scriptsize scriptsize}
 {\footnotesize footnotesize}
 {\small small}
-{\normalsize normalsize}
+{\normalsize normalsize} % Default
 {\large large}
 {\Large Large}
 {\LARGE LARGE}
