--- a/snippet/table.tex
+++ b/snippet/table.tex
@@ -1,6 +1,6 @@
 \begin{table}[H]
 	\centering
-	\caption{very basic caption}
+	\caption{<++>}
 	\begin{tabular}{|l|l|l|l|>{\bfseries}l|}
 		\hline
 		\diagbox{Försök}{Grupp} & Grupp 1 & Grupp 2 & Grupp 3 & Kontroll \\
@@ -16,5 +16,5 @@
 		Total & 392 & 487 & 324 & 405\\
 		\hline
 	\end{tabular}
-	\label{tab:sample_table}
+	\label{tab:<++>}
 \end{table}
