--- a/snippet/tcolorbox.tex
+++ b/snippet/tcolorbox.tex
@@ -1,7 +1,4 @@
-\begin{tcolorbox}[
-		title=My nice heading,
-		fonttitle=\bfseries,
-		]
+\begin{tcolorbox}[title=My nice heading]
 	This is another \textbf{tcolorbox}.
 	\tcblower
 	Here, you see the lower part of the box.
