--- a/snippet/skeleton.bib
+++ b/snippet/skeleton.bib
@@ -1,7 +1,7 @@
 @article{example2021,
-	author="John doe",
-	title="An placeholder latex citation",
-	date="2019-08-05",
-	publisher="Random pulisher",
-	url="https://example.org",
+	author={John doe},
+	title={An placeholder latex citation},
+	date={2019-08-05},
+	publisher={Random pulisher},
+	url={https://example.org},
 }
