--- a/snippet/usepackage_biblatex.tex
+++ b/snippet/usepackage_biblatex.tex
@@ -1,17 +1,17 @@
 \usepackage[
 	sorting=none,
-	date=iso, seconds=true,
+	date=iso, seconds=true, alldates=iso,
+	%autocite=footnote, style=verbose-ibid,
 	%style=science,
-	%style=apa, % Use \textcite with this style
-	alldates=iso,
+	%style=apa,
 ]{biblatex}
 \addbibresource{\jobname.bib}
 %\begin{filecontents}[overwrite]{\jobname.bib}
 %@article{example2021,
-%	author="John doe",
-%	title="An placeholder latex citation",
-%	date="2019-08-05",
-%	publisher="Random pulisher",
-%	url="https://example.org",
+%	author={John doe},
+%	title={An placeholder latex citation},
+%	date={2019-08-05},
+%	publisher={Random pulisher},
+%	url={https://example.org},
 %}
 %\end{filecontents}
