Proper fonts for school assigments

--- a/nvim/.config/nvim/snippet/school.tex
+++ b/nvim/.config/nvim/snippet/school.tex
@@ -1,6 +1,7 @@
-\documentclass[a4paper]{article}
+\documentclass[12pt,a4paper]{article}
 %\usepackage[document]{ragged2e}
-\usepackage{mathptmx}
+\usepackage{fontspec}
+\setmainfont{Times New Roman}
 %\usepackage[doublespacing]{setspace}
 
 \begin{document}
