Cleaned up latex snippets

--- a/nvim/.config/nvim/snippet/figure.tex
+++ b/nvim/.config/nvim/snippet/figure.tex
@@ -1,6 +1,6 @@
 \begin{figure}[H]
 	\centering
 	\includegraphics[height=5cm]{example-grid-100x100pt}
-	\caption{<++>}
+	\caption{<++> \parencite[bild från][]{<++>}}
 	\label{fig:<++>}
 \end{figure}
