--- a/nvim/.config/nvim/snippet/usepackage_basic.tex
+++ b/nvim/.config/nvim/snippet/usepackage_basic.tex
@@ -1,3 +1,10 @@
+\usepackage[iso,swedish]{isodate}
+\usepackage[
+	main=english,
+	%main=swedish
+	swedish
+]{babel}
+
 \usepackage{csquotes}
 \usepackage[margin=1in]{geometry}
 \usepackage{parskip}
