--- a/nvim/.config/nvim/snippet/usepackage_biblatex.tex
+++ b/nvim/.config/nvim/snippet/usepackage_biblatex.tex
@@ -1,7 +1,7 @@
 \usepackage[
 	sorting=none,
 	date=iso, seconds=true, alldates=iso,
-	%autocite=footnote, style=verbose-ibid,
+	%style=verbose-ibid,
 	%style=science,
 	%style=apa,
 ]{biblatex}
