--- a/nvim/.config/nvim/snippet/usepackage_fonts.tex
+++ b/nvim/.config/nvim/snippet/usepackage_fonts.tex
@@ -1,3 +1,6 @@
+%\usepackage[document]{ragged2e}
+%\usepackage[doublespacing]{setspace}
+
 \usepackage{fontspec}
 \setmainfont{Times New Roman}
 %\setmainfont{Calibri}
