Updated tex snippets

--- a/nvim/.config/nvim/snippet/usepackage_basic.tex
+++ b/nvim/.config/nvim/snippet/usepackage_basic.tex
@@ -4,7 +4,7 @@
 	%main=swedish
 	swedish
 ]{babel}
-
+\usepackage{gensymb}
 \usepackage{csquotes}
 \usepackage[margin=1in]{geometry}
 \usepackage{parskip}
@@ -12,6 +12,6 @@
 \usepackage[
 	%colorlinks,
 	%allcolors=blue,
-	frenchlinks
+	%frenchlinks
 ]{hyperref}
 \usepackage[multiple]{footmisc}
