Tex snippet fixes
- Removed float package since it broke footnotes inside figure captions.
- Added snipped for changing automatic numbering.
- Split circuitikz from physics snippet.

--- a/nvim/.config/nvim/snippet/figure.tex
+++ b/nvim/.config/nvim/snippet/figure.tex
@@ -1,6 +1,5 @@
-\begin{figure}[H]
-	\centering
+\begin{figure}[h] \centering
 	\includegraphics[height=5cm]{example-grid-100x100pt}
-	\caption{<++> \parencite[bild från][]{<++>}}
+	\caption{<++> \autocite[<++>][]{<++>}}
 	\label{fig:<++>}
 \end{figure}
