--- a/nvim/.config/nvim/snippet/usepackage_basic.tex
+++ b/nvim/.config/nvim/snippet/usepackage_basic.tex
@@ -4,14 +4,14 @@
 	%main=swedish
 	swedish
 ]{babel}
-\usepackage{gensymb}
 \usepackage{csquotes}
 \usepackage[margin=1in]{geometry}
 \usepackage{parskip}
-\usepackage{ftnxtra}
 \usepackage[
-	%colorlinks,
+	colorlinks,
+	linkcolor=black, urlcolor=magenta,
 	%allcolors=blue,
 	%frenchlinks
 ]{hyperref}
+\usepackage{ftnxtra}
 \usepackage[multiple]{footmisc}
