--- a/nvim/.config/nvim/snippet/figure.tex
+++ b/nvim/.config/nvim/snippet/figure.tex
@@ -1,5 +1,5 @@
-\begin{figure}[h] \centering
+\begin{figure}[H] \centering
 	\includegraphics[height=5cm]{example-grid-100x100pt}
-	\caption{<++> \autocite[<++>][]{<++>}}
+	\caption{<++> \parencite[<++>][]{<++>}}
 	\label{fig:<++>}
 \end{figure}
