Removed figure package
Was messing up footnotes when using multiple multiple figures on the same page

--- a/nvim/.config/nvim/snippet/figure.tex
+++ b/nvim/.config/nvim/snippet/figure.tex
@@ -1,4 +1,4 @@
-\begin{figure}[H] \centering
+\begin{figure}[h] \centering
 	\includegraphics[height=5cm]{example-grid-100x100pt}
 	\caption{<++> \parencite[<++>][]{<++>}}
 	\label{fig:<++>}
