Changed label location in figure and table snippet

--- a/nvim/.config/nvim/snippet/figure.tex
+++ b/nvim/.config/nvim/snippet/figure.tex
@@ -1,5 +1,4 @@
 \begin{figure}[h] \centering
 	\includegraphics[height=5cm]{example-grid-100x100pt}
-	\caption{<++> \parencite[<++>][]{<++>}}
-	\label{fig:<++>}
+	\caption{<++> \parencite[<++>][]{<++>}} \label{fig:<++>}
 \end{figure}
