--- a/nvim/.config/nvim/snippet/table.tex
+++ b/nvim/.config/nvim/snippet/table.tex
@@ -1,6 +1,5 @@
-\begin{table}[H]
-	\centering
-	\caption{<++>}
+\begin{table}[h] \centering
+	\caption{<++>} \label{tab:<++>}
 	\begin{tabular}{|l|l|l|l|>{\bfseries}l|}
 		\hline
 		\diagbox{Försök}{Grupp} & Grupp 1 & Grupp 2 & Grupp 3 & Kontroll \\
@@ -16,5 +15,4 @@
 		Total & 392 & 487 & 324 & 405\\
 		\hline
 	\end{tabular}
-	\label{tab:<++>}
 \end{table}
