Changed example image in figure snippet

--- a/nvim/.config/nvim/snippet/figure.tex
+++ b/nvim/.config/nvim/snippet/figure.tex
@@ -1,4 +1,4 @@
 \begin{figure}[h] \centering
-	\includegraphics[height=5cm]{example-grid-100x100pt}
+	\includegraphics[height=5cm]{example-image}
 	\caption{<++> \parencite[<++>][]{<++>}} \label{fig:<++>}
 \end{figure}
